fixed invisible space

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,9 @@
+html,body
+{
+
+    overflow-x: hidden; 
+}
+
 .navbarTitle
 {
     font-size: 32px;
